[package]
name = "rask"
version = "0.0.1"
edition = "2021"
description = "Low-level HTTP for learning purposes"
homepage = "https://github.com/ryanseipp/rask"
repository = "https://github.com/ryanseipp/rask"
license = "Apache-2.0"
keywords = ["HTTP", "Server", "Proxy", "H2", "H3"]
categories = ["web-programming::http-server"]

[dependencies]
crossbeam-channel = "0.5.7"
mio = { version = "0.8", features = ["os-poll", "net"] }
rustls = "0.20.8"
slab = "0.4"

# [[example]]
# name = "example"
#
# [[example]]
# name = "example_client"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "parse_method"
harness = false

[[bench]]
name = "parse_target"
harness = false

[[bench]]
name = "parse_version"
harness = false

[[bench]]
name = "parse_headers"
harness = false

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false

[profile.dev]
debug = true
opt-level = 0

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
